# algomat-reloaded

./: .gitignore
lab2/: gaussian_no_pivot.ipynb  lu.ipynb  lu.py  main.py  solveGauss.m  tempCodeRunnerFile.ipynb  tempCodeRunnerFile.py  test.ipynb
lab3/: Cargo.toml  main.py
lab3/ivan_py/: main.py
lab3/src/: main.rs
zad1/: macierze.cabal  test.py
zad1/app/: Main.hs
