cabal-version:      3.0
name:               macierze
version:            0.1.0.0
build-type:         Simple

common warnings
    ghc-options: -Wall

executable macierze
    import:           warnings
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- Other library packages from which modules are imported.
    build-depends:    base ^>=4.17.2.1,

    -- Directories containing source files.
    hs-source-dirs:   app

    -- Base language which the package is written in.
    default-language: Haskell2010
